# julia-rs

./: Cargo.toml
julia-rs/: CONTRIBUTING.md  Cargo.toml  README.md
julia-rs/examples/: callback.rs  complex.rs  exception.rs  hello.rs  math.rs  repl.rs  svec.rs  typename.rs
julia-rs/src/: error.rs  ext.rs  lib.rs  string.rs  sys.rs  version.rs
julia-rs/src/api/: array.rs  datatype.rs  exception.rs  function.rs  mod.rs  module.rs  primitive.rs  sym.rs  task.rs  value.rs
julia-sys/: Cargo.toml  README.md  build.rs
julia-sys/examples/: complex.rs  exception.rs  hello.rs
julia-sys/src/: atomics.rs  lib.rs  threads.rs
