[workspace]
members = [
    "julia-rs",
    "julia-sys",
]

resolver = "2"

[workspace.dependencies]
bindgen = { version = "0.69.4" }
clap = { version = "4.5.11", features = ["derive"] }
flate2 = { version = "1.0.30" }
libc = { version = "0.2.155" }
smallvec = { version = "1.13.2", features = ["union", "const_generics", "const_new"] }

[profile.release]
lto = "fat"
codegen-units = 1
