[package]
name = "julia"
version = "0.3.0"
edition = "2021"

authors = ["Szymon Walter <walter.szymon.98@gmail.com>"]
license = "Zlib"
readme = "README.md"
keywords = ["julia", "lang", "scripting", "script"]
repository = "https://github.com/pi-pi3/julia-rs"
homepage = "https://github.com/pi-pi3/julia-rs"
documentation = "https://docs.rs/julia"
categories = ["api-bindings"]
description = """
Idiomatic and safe Julia bindings for Rust
"""

[dependencies]
libc = { workspace = true }
smallvec = { workspace = true }
julia-sys = { version = "0.3", path = "../julia-sys" }
